--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 -->
 					<ul class="fh5co-social">
 						<li><a href="mailto:shubhamjindal1234@gmail.com" target="_blank"><i class="icon-envelope"></i></a></li>
-						<li><a href="#"><i class="icon-facebook"></i></a></li>
+						<!--<li><a href="#"><i class="icon-facebook"></i></a></li>-->
 						<li><a href="https://www.instagram.com/shubham_jindal30" target="_blank"><i class="icon-instagram"></i></a></li>
 						<li><a href="https://github.com/shubhamjindal30" target="_blank"><i class="icon-github"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/shubhamjindal30" target="_blank"><i class="icon-linkedin"></i></a></li>
