--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             
                             <div class="fh5co-feature">
 								<div class="fh5co-icon">
-									<i class="icon-map2"></i>
+									<i class="icon-times-circle"></i>
 								</div>
 								<div class="fh5co-text">
 									<b><a href="https://github.com/shubhamjindal30/Tic-Tac-Toe" target="_blank">Tic Tac Toe</a></b>
